--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,5 +1,12 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
+@import "hero";
+@import "built";
+@import "service";
+@import "quick";
+@import "carusel";
+@import "price";
+@import "bottom";
 @import "footer";
 
