--- a/css/main.css
+++ b/css/main.css
@@ -1211,4 +1211,96 @@ img {
   background: #FFFFFF;
   border-radius: 8px;
 }
+
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 0 23px;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__item {
+  margin: 0;
+  padding: 0;
+}
+
+.footer__logo, .app__link, .footer__text, .footer__title {
+  text-decoration: none;
+}
+
+.app__link {
+  margin-right: 16px;
+}
+
+.footer__logo {
+  margin-bottom: 32px;
+}
+
+.footer__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer__title {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  color: #22343D;
+}
+
+.footer__text {
+  margin-bottom: 8px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 35px;
+  color: #22343D;
+}
+
+.footer__end {
+  text-align: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: #22343D;
+}
+
+.footer__item:last-child {
+  width: 100%;
+  max-width: 325px;
+}
+
+.footer__label {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  color: #22343D;
+}
+
+.footer__input {
+  margin-top: 34px;
+}
+
+.footer__button {
+  margin-top: 20px;
+  padding: 8px 15px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #FFFFFF;
+  background: #02897A;
+  border-radius: 4px;
+  border: none;
+}
 /*# sourceMappingURL=main.css.map */
