--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -7,6 +7,14 @@
 @import "quick";
 @import "carusel";
 @import "price";
+@import "client";
 @import "bottom";
+@import "enterprise";
+@import "product";
+@import "question";
+@import "compony";
+@import "choose";
+@import "work";
+@import "offer";
 @import "footer";
 
