--- a/scss/blocks/_bottom.scss
+++ b/scss/blocks/_bottom.scss
@@ -23,6 +23,8 @@
 }
 
 .bottom__text{
+  width: 100%;
+  max-width:510px ;
   margin:35px  0 70px 0;
   font-weight: 600;
   font-size: 32px;
@@ -39,4 +41,23 @@
   text-decoration: none;
   background: #FFFFFF;
   border-radius: 8px;
+}
+
+@media only screen and (max-width:576px){
+  .bottom__inner{
+    flex-direction:column;
+    align-items: center;
+    &::after{
+      margin-top: 40px;
+    }
+  }
+
+  .bottom__content{
+    text-align: center;
+  }
+
+  .bottom__text{
+    text-align: center;
+    max-width: 328px;
+  }
 }
