--- a/scss/blocks/_built.scss
+++ b/scss/blocks/_built.scss
@@ -12,11 +12,12 @@
 }
 
 .built__title{
-  margin: 0 0 66px;
+  width: 100%;
+  max-width: 530px;
+  margin: 0 auto 66px;
   font-weight: 700;
   font-size: 32px;
   line-height: 48px;
-  text-align: center;
   color: #22343D;
 }
 
@@ -119,4 +120,33 @@
   background: #02897A;
   border-radius: 4px;
   text-decoration: none;
+}
+
+@media only screen and (max-width:576px){
+  .built{
+    background-size: 100% 201px;
+    margin-bottom: 95px;
+  }
+  .built__title{
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 48px;
+    text-align: center;
+    color: #22343D;
+  }
+
+  .built__inner{
+    width: 100%;
+    max-width: 350px;
+  }
+
+  .built__list{
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .built__item{
+    text-align: center;
+    margin-bottom: 37px;
+  }
 }
