--- a/scss/blocks/_choose.scss
+++ b/scss/blocks/_choose.scss
@@ -76,3 +76,18 @@
     background-image: url(../../img/like.png);
   }
 }
+
+@media only screen and (max-width:576px){
+  .choose__list{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .choose__item{
+    margin-bottom: 35px;
+  }
+
+  .choose__item:last-child{
+    margin-bottom: 0;
+  }
+}
