--- a/scss/blocks/_client.scss
+++ b/scss/blocks/_client.scss
@@ -12,8 +12,10 @@
   text-align: center;
 }
 
-.clinet__text{
-  margin: 0 0 50px;
+.client__text{
+  width: 100%;
+  max-width: 537px;
+  margin: 0 auto 50px;
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
@@ -83,4 +85,19 @@
   line-height: 24px;
   letter-spacing: 0.2px;
   color: #252B42;
+}
+
+@media only screen and (max-width:576px){
+  .client__text{
+    max-width: 323px;
+  }
+
+  .client__list{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .client__item{
+    margin-bottom: 32px;
+  }
 }
