--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -81,3 +81,21 @@
   border-radius: 4px;
   border: none;
 }
+
+@media only screen and(max-width:576px){
+  .footer__list{
+    flex-direction: column;
+  }
+
+  .footer__app{
+    margin-bottom: 32px;
+  }
+
+  .footer__item{
+    text-align: center;
+  }
+
+  .footer__item:last-child{
+    margin: 0 auto;
+  }
+}
