--- a/scss/blocks/_quick.scss
+++ b/scss/blocks/_quick.scss
@@ -23,12 +23,19 @@
 }
 
 .quick__text{
+  width: 100%;
+  max-width: 542px;
   margin: 0 0 32px;
   font-weight: 500;
   font-size: 16px;
   line-height: 26px;
   text-align: center;
   color: #22343D;
+}
+
+.quick__pic{
+  width: 98px;
+  height: 98px;
 }
 
 .quick__list{
@@ -82,4 +89,43 @@
   background: #02897A;
   border-radius: 4px;
   text-decoration: none;
+}
+
+@media only screen and (max-width:576px){
+  .quick{
+    background-size: 100% 201px;
+    margin-bottom: 100px;
+  }
+
+  .quick__item{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .quick__item:nth-child(2) > .quick__content{
+    flex-direction: row-reverse;
+  }
+
+  .quick__content{
+    display: flex;
+    align-items: center;
+    margin-bottom: 32px;
+    width: 100%;
+    max-width: 338px;
+  }
+
+  .quick__span{
+    padding: 12px 20px 2px;
+    box-shadow: 0px 2px 15px rgba(23, 58, 86, 0.1);
+    border-radius: 26.5px;
+  }
+
+  .quick__pic{
+    width: 89px;
+    height: 89px;
+  }
+
+  .quick__text{
+    max-width: 338px;
+  }
 }
