--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -77,10 +77,6 @@
   color: #22343D;
 }
 
-.service__title--top{
-  margin:0 0 130px;
-}
-
 .service__heading{
   font-weight: 600;
   font-size: 16px;
@@ -162,4 +158,23 @@
 
 .service__heading{
   margin-bottom: 12px;
+}
+
+@media only screen and (max-width:576px){
+.service{
+  margin-bottom: 80px;
+}
+
+  .service__item, .service__item:nth-child(2){
+    flex-direction: column;
+  }
+
+  .service__item , .service__item:nth-child(2), .service__item:nth-child(3){
+    &::before{
+      width:349px ;
+      height: 306px ;
+      background-size: 349px 306px;
+      margin-bottom: 50px;
+    }
+  }
 }
