--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -66,6 +66,10 @@
 }
 
 .footer__input{
+  padding: 10px 0 ;
+  background: #FFFFFF;
+  border: 1px solid #BCD0E5;
+  border-radius: 4px;
   margin-top: 34px;
 }
 
