--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,4 +1,5 @@
 .header{
+  position: relative;
   padding:23px 0 29px  ;
   margin-bottom: 25px;
 }
@@ -85,10 +86,48 @@
 
   .header__nav{
     display: none;
+    &--open{
+      margin-top: 90px;
+      display: block;
+      position: absolute;
+      background-color: gray;
+      top:0;
+      right: 0;
+      max-width: 50%;
+      width: 100%;
+      height: 100vh;
+      z-index: 5;
   }
+}
+
+.header__list{
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.header__item{
+  margin-bottom: 5px;
+}
+
+.header__item:nth-child(4){
+  margin-bottom: 10px;
+}
+
+.header__item:nth-child(5){
+  margin-bottom: 25px;
+}
+.header__item:nth-child(6){
+  margin-bottom: 15px;
+}
+
+.header__item__link{
+  color: #FFFFFF;
+}
 
   .header__burger{
     display: block;
+    width: 30px;
     margin-left: auto;
   }
 }
